flux-components/keycloak/ingress-https/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER:-none}
spec:
  ingressClassName: ${INGRESS_CLASS}
  rules:
    - host: identity.${DOMAIN}
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
  tls:
    - hosts:
        - identity.${DOMAIN}
      secretName: keycloak-tls
